uipath-commons/main/default/objects/ZinfiConfiguration__c/ZinfiConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store settings for Zinfi Integration</description>
    <label>Zinfi Configuration</label>
</CustomObject>