uipath-commons/main/default/objects/ZinfiConfiguration__c/fields/IsSyncAccount__c.field-meta.xml
<CustomField>
    <fullName>IsSyncAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable account sync with Zinfi</description>
    <label>IsSyncAccount</label>
    <type>Checkbox</type>
</CustomField>