uipath-commons/main/default/objects/ZinfiConfiguration__c/fields/WebHook__c.field-meta.xml
<CustomField>
    <fullName>WebHook__c</fullName>
    <description>Zinfi WebHook</description>
    <label>WebHook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>