uipath-commons/main/default/objects/ZinfiConfiguration__c/fields/WebHookContact__c.field-meta.xml
<CustomField>
    <fullName>WebHookContact__c</fullName>
    <description>Zinfi WebHookContact</description>
    <label>WebHookContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>