uipath-commons/main/default/objects/ZinfiConfiguration__c/fields/WebhookEndPoint__c.field-meta.xml
<CustomField>
    <fullName>WebhookEndPoint__c</fullName>
    <description>Zinfi callout end point</description>
    <label>WebhookEndPoint</label>
    <type>Url</type>
</CustomField>