uipath-commons/main/default/objects/ZinfiConfiguration__c/fields/WebToken__c.field-meta.xml
<CustomField>
    <fullName>WebToken__c</fullName>
    <description>Zinfi WebToken</description>
    <label>WebToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>